# oscar_description

./: CMakeLists.txt  README.md  package.xml
config/: view_ur3_dual_eef_wc_mobile.rviz
launch/: view_ur3_dual_eef_wc_mobile.launch
meshes/: empty.stl
meshes/mimic/collision/: calibration_adapter_robotiq2f140.stl  pipette.stl
meshes/mimic/visual/: capture_tool.dae
meshes/mimik/calibration/: mimik_calibration_cone.stl
urdf/: ur3_dual_eef_wc_mobile.xacro
urdf/biorad/: thermal_cycler_t100_open_macro.xacro  thermocycler_t100_open_macro.xacro
urdf/intel/: realsense_d415_macro.xacro
urdf/mimic/: biorad_t100_adapter_macro.xacro  calibration_adapter_robotiq2f140_macro.xacro  capture_tool_macro.xacro  pipette_macro.xacro  pipette_p200_macro.xacro  robotiq_2f140_calibration_adapter_macro.xacro  ur3_capture_tool_macro.xacro  ur3_mounting_plate_macro.xacro
urdf/mimik/: biorad_t100_adapter_macro.xacro  pipette_p200_macro.xacro  realsense_camera_adapter_macro.xacro  robotiq_2f140_calibration_adapter_macro.xacro  ur3_big_mounting_plate_macro.xacro  ur3_capture_tool_macro.xacro  ur3_mounting_plate_macro.xacro  ur_big_mounting_plate_macro.xacro  ur_mounting_plate_macro.xacro
urdf/newport/: sa2_30x30_macro.xacro  vh3660_48x48_macro.xacro
urdf/picknik/: ur5_realsense_camera_adapter_macro.xacro
urdf/udes/: biorad_t100_adapter_macro.xacro  pipette_p200_macro.xacro  realsense_camera_adapter_macro.xacro  robotiq_2f140_calibration_adapter_macro.xacro  ur3_capture_tool_macro.xacro  ur_big_mounting_plate_macro.xacro  ur_mounting_plate_macro.xacro
(+90 files in other folders)
